v1.1.6 - Graffiti Soul Integration (#42)
* add in soul configs

* add tests

* remove comment

* version

---------
